tests/baselines/reference/thisTypeInAccessorsNegative(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
thisTypeInAccessorsNegative.ts(10,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
thisTypeInAccessorsNegative.ts(11,11): error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== thisTypeInAccessorsNegative.ts (2 errors) ====
    interface Foo {
        n: number;
        x: number;
    }
    interface Bar {
        wrong: "place" | "time" | "method" | "technique";
    }
    const mismatch = {
        n: 13,
        get x(this: Foo) { return this.n; },
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
        set x(this: Bar, n) { this.wrong = "method"; }
              ~~~~~~~~~
!!! error TS2784: 'get' and 'set' accessors cannot declare 'this' parameters.
    }
    const contextual: Foo = {
        n: 16,
        get x() { return this.n; }
    }
    